--- a/_includes/heros/hero-take5-design-basics.html
+++ b/_includes/heros/hero-take5-design-basics.html
@@ -1,10 +1,10 @@
-{%- assign hero_link = "/courses/take5/#design" -%}
+{%- assign hero_link = "/courses/take5#design" -%}
 
 <link rel="preload" as="image" href="{{ site.url }}{{ hero_img }}?{{ site.time | date:'%s' }}" fetchpriority="high">
 <link rel="stylesheet" href="{{ site.url }}{{ '/css/heros/hero-take5.css' }}?{{ site.time | date:'%s' }}" fetchpriority="high">
   <div class="hero-promo topic-design" id="hero-take5-design-basics">
   <div class="container">
-    <a href="{{ site.url }}{{ hero_link }}">
+    <a href="{{ site.gymurl }}{{ hero_link }}">
       <div class="hero-content-art"></div>
     </a>
     <div class="hero-content-copy">
@@ -16,7 +16,7 @@
         <p class="description">We’re going back to design basics with these 5-minute tutorials taught by Meagan Fisher.</p>
       </header>
       <div class="cta">
-        <a class="gym-button" href="{{ site.url }}{{ hero_link }}"><b>Watch the Tutorials</b></a>
+        <a class="gym-button" href="{{ site.gymurl }}{{ hero_link }}"><b>Watch the Tutorials</b></a>
       </div>
     </div>
   </div>
