use null instead

--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -136,6 +136,6 @@ JS or tracking pixels to be included at the bottom of the theme
 {%- endcomment -%}
 
 <script id="mainjs" async defer src="{{site.url}}/js/main.js?{{ site.time | date:'%s' }}"></script>
-<script id="cookiebanner" async src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" data-link="#f89820" data-fg="inherit" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
+<script id="cookiebanner" async src="{{site.url}}/js/vendor/cookiebanner.js?{{ site.time | date:'%s' }}" data-link="#f89820" data-fg="null" data-message="We use cookies to enhance your experience. By continuing to visit this site you agree to our use of cookies. Find out more about how we use cookies in our" data-linkmsg="Privacy Policy." data-moreinfo="/privacy-policy"></script>
 
 
