Update design basics hero
- Remove image preload timestamp

--- a/_includes/heros/hero-take5-design-basics.html
+++ b/_includes/heros/hero-take5-design-basics.html
@@ -1,6 +1,6 @@
 {%- assign hero_link = "/courses/take5#design" -%}
 
-<link rel="preload" as="image" href="{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics.gif?{{ site.time | date:'%s' }}" fetchpriority="high">
+<link rel="preload" as="image" href="{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics.gif" fetchpriority="high">
 <link rel="stylesheet" href="{{ site.url }}{{ '/css/heros/hero-take5.css' }}?{{ site.time | date:'%s' }}" fetchpriority="high">
   <div class="hero-promo topic-design" id="hero-take5-design-basics">
   <div class="container">
