--- a/css/heros/hero-take5.scss
+++ b/css/heros/hero-take5.scss
@@ -23,22 +23,23 @@
 .hero-promo {
   position: relative;
   font-size: 16px;
-}
 
-.hero-promo::after {
-  display: block;
-  position: absolute;
-  bottom: 0;
-  content: "";
-  width: 100%;
-  height: 7.5em;
-  background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.025), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.15) );
-}
+  &::after {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 7.5em;
+    background: linear-gradient( rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.025), rgba(0, 0, 0, 0.05), rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.15) );
+  }
 
-// structural spacing
+  // structural spacing
 
-.hero-promo .container {
-  padding: 0 30px 3em;
+  .container {
+    padding: 0 30px 3em;
+  }
+
 }
 
 .hero-content-art {
@@ -47,38 +48,35 @@
 
 @include breakpoint(medium, min) {
 
-  .hero-promo .container {
-    position: relative;
-    left: 17%;
-    box-sizing: content-box;
-    max-width: 37em;
-    min-height: 25.125em;
-  }
+  .hero-promo {
 
-  .hero-promo .hero-content-art {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    background: #333 no-repeat left center;
-    background-size: cover;
-    border-image: 1 / 0 0 0 999em / 0 0 0 999em stretch;
-    border-right: 2px solid $gym-gray;
-  }
+    .container {
+      position: relative;
+      left: 17%;
+      box-sizing: content-box;
+      max-width: 37em;
+      min-height: 25.125em;
+    }
 
-  .hero-promo .hero-content-art::after {
-    display: block;
-    position: relative;
-    left: 2px;
-    content: "";
-    height: 100%;
-    border-right: 2px solid $gym-gray;
-  }
+    .hero-content-art {
+      display: block;
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: $gym-dark-gray-2 no-repeat left center;
+      background-size: cover;
+      padding-left: 2px;
+      border-image: 1 / 0 0 0 999em / 0 0 0 999em stretch;
+      box-shadow: 2px 0 0 0 $gym-gray;
+      margin-left: -2px;
+    }
 
-  .hero-content-copy {
-    padding-left: 1.4em;
+    .hero-content-copy {
+      padding-left: 0.4em;
+    }
+
   }
 
 }
@@ -86,68 +84,69 @@
 // content / copy
 
 .hero-content-copy {
-  padding-left: .4em;
   margin-top: 6%;
   margin-bottom: 4%;
-}
 
-.hero-content-copy header {
-  max-width: 36.5em;
-}
+  header {
+    max-width: 36.5em;
+  }
 
-.hero-content-copy header h1 {
-  font-size: 2.5em;
-  line-height: 1.15;
-  letter-spacing: .1rem;
-  color: $gym-white;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  h1 {
+    font-size: 2.5em;
+    line-height: 1.15;
+    letter-spacing: .1rem;
+    color: $gym-white;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
-.hero-content-copy header h2 {
-  font-size: 2.5em;
-  line-height: 1.15;
-  letter-spacing: .1rem;
-  word-spacing: -.05rem;
-  color: $gym-black;
-  margin-top: 0;
-  margin-bottom: 0;
-}
+  h2 {
+    font-size: 2.5em;
+    line-height: 1.15;
+    letter-spacing: .1rem;
+    word-spacing: -.05rem;
+    color: $gym-black;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
-.take5-brand-kern {
-  word-spacing: -.1rem;
-}
+  .take5-brand-kern {
+    word-spacing: -.1rem;
+  }
 
-.hero-content-copy .subhead-topic {
-  font-weight: bold;
-  font-size: 1em;
-  color: #e1e1e1;
-  letter-spacing: .1rem;
-  margin-bottom: 2.5rem;
-}
+  .subhead-topic {
+    font-weight: bold;
+    font-size: 1em;
+    color: #e1e1e1;
+    letter-spacing: .1rem;
+    margin-bottom: 2.5rem;
+  }
 
-.hero-content-copy .description {
-  font-size: 1.4em;
-  color: $gym-black;
-  margin-top: 1.6rem;
+  .description {
+    font-size: 1.4em;
+    color: $gym-black;
+    margin-top: 1.6rem;
+  }
+
 }
 
 // cta
 
 .hero-promo .cta {
   margin-top: 2.5rem;
-}
 
 // !override / reset/rescale font-size adjustment
 
-.hero-promo a.gym-button {
-  position: relative;
-  font-size: 105%;
-  width: auto !important;
-  vertical-align: bottom;
-  padding: 1.2em 1.6em !important;
-  border: 2px solid $gym-white !important;
-  z-index: 1;
+  a.gym-button {
+    position: relative;
+    font-size: 105%;
+    width: auto !important;
+    vertical-align: bottom;
+    padding: 1.2em 1.6em !important;
+    border: 2px solid $gym-white !important;
+    z-index: 1;
+  }
+
 }
 
 // hero-take5-design-basics.html
@@ -157,8 +156,8 @@
 #hero-take5-design-basics {
 
   .hero-content-art {
-    background-image: url("{{ site.url }}/img/take5/posters/gym-5055-hero.jpg");
-    border-image-source: url("{{ site.url }}/img/take5/posters/gym-5055-hero.jpg");
+    background-image: url("{{ site.url }}/img/take5/posters/gym-5055-hero.jpg?{{ site.time | date:'%s' }}");
+    border-image-source: url("{{ site.url }}/img/take5/posters/gym-5055-hero.jpg?{{ site.time | date:'%s' }}");
   }
 
 }
@@ -170,8 +169,8 @@
   #hero-take5-design-basics {
 
     .hero-content-art {
-      background-image: url("{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics.gif");
-      border-image-source: url("{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics-fill.gif");
+      background-image: url("{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics.gif?{{ site.time | date:'%s' }}");
+      border-image-source: url("{{ site.url }}/home/img/hero-take5-design-basics/take5-design-basics-fill.gif?{{ site.time | date:'%s' }}");
     }
 
   }
