--- a/_includes/heros/hero-take5-featured.html
+++ b/_includes/heros/hero-take5-featured.html
@@ -48,7 +48,9 @@
 <link rel="stylesheet" href="{{ site.url }}/css/heros/hero-take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
   <div class="{{ 'hero-promo' }} {{ hero_style }}" id="hero-{{ hero_ID }}">
   <div class="container">
-    <div class="hero-content-art" style="background-image: url('{{ site.url }}{{ hero_art }}?{{ site.time | date:'%s' }}'); border-image-source: url('{{ site.url }}{{ hero_art }}?{{ site.time | date:'%s' }}');"></div>
+    <a href="{{ hero_link }}">
+      <div class="hero-content-art" style="background-image: url('{{ site.url }}{{ hero_art }}?{{ site.time | date:'%s' }}'); border-image-source: url('{{ site.url }}{{ hero_art }}?{{ site.time | date:'%s' }}');"></div>
+    </a>
     <div class="hero-content-copy">
       <header>
         <h3 class="subhead-topic">{{ hero_topic }}</h3>
