--- a/_includes/heros/hero-take5-portfolio.html
+++ b/_includes/heros/hero-take5-portfolio.html
@@ -19,7 +19,7 @@
         <p>There’s always a reason to refresh your online portfolio. Improving your content just got easier thanks to these <span class="no-wrap">5-minute</span> video tutorials.</p>
       </header>
       <div class="cta">
-        <a class="gym-button natural" href="{{ hero_link }}" target="_blank" rel="noopener"><b>Watch the Tutorials</b></a>
+        <a class="gym-button natural" href="{{ hero_link }}"><b>Watch the Tutorials</b></a>
       </div>
     </div>
   </div>
