Update utility navigation
- Remove utility navigation on active site banner

--- a/css/main.scss
+++ b/css/main.scss
@@ -1057,6 +1057,12 @@ aside.system-status {
   // display: none;
 }
 
+// Exclude `#utility-nav` when banner is active
+
+#utility-nav {
+  display: none;
+}
+
 // Courseware Raw HTML styling
 
 .raw-html .content {
