--- a/_includes/partials/system-status-helper.html
+++ b/_includes/partials/system-status-helper.html
@@ -1,8 +1,13 @@
 {%- comment -%}
 1. When the `data-active` attribute is set to `true`, the content of this div will automatically appear in the system status bar on the Gymnasium site. Style sheets should target the aside.system-status class, and styles can be added to `main.scss`; see `systemStatus()` in `js/gymnasium.js` for display behavior.
-2. TODO: Home page exclusion toggle `data-active-homepage`. See `.gymnasium-home #system-status` in `css/main.css`.
+2. TODO: we don't need it now, but if we ever wanted to only have the banner appear on a couple of pages, add support for page-specific banners, as in page.banner = true
 {%- endcomment -%}
-<div id="system-status-helper" class="hide" data-active="true">
+{%- assign banner_active = site.banner -%}
+{%- if page.banner == false -%}
+  {%- assign banner_active = page.banner -%}
+{%- endif -%}
+<!-- banner_active: {{ banner_active }} | site.banner: {{ site.banner }} | page.banner: {{ page.banner }}-->
+<div id="system-status-helper" class="hide" data-active="{{ banner_active }}">
   <div class="container">
     <p><strong>We’re celebrating 10 years of Gymnasium!</strong> <span aria-label="Party Popper emoji" role="img">&#127881;</span> Join us for a <a href="{{ site.gymurl }}/anniversary">scroll down memory lane</a>.</p>
   </div>
