Update logic again

--- a/_includes/partials/system-status-helper.html
+++ b/_includes/partials/system-status-helper.html
@@ -2,8 +2,10 @@
 1. Use _config.yml (and per-environment) file(s) to define whether or not the banner shows site-wide. Adding a banner: false to a page's front-matter will exclude the banner from that page. Conversely, if the site banner is set to false, individual pages can still display the banner using the page's front-matter. The current behavior is to hide the utility nav when the banner is active via CSS; see `systemStatus()` in `js/gymnasium.js` for additional display behavior.
 {%- endcomment -%}
 {%- assign banner_active = site.banner -%}
-{%- if page.banner == false or page.banner == true -%}
-  {%- assign banner_active = page.banner -%}
+{%- if page.banner == false -%}
+  {%- assign banner_active = false -%}
+{%- else if page.banner == true -%}
+  {%- assign banner_active = true -%}
 {%- endif -%}
 <div id="system-status-helper" class="hide" data-active="{{ banner_active }}">
   <div class="container">
