Update courses page
- Update featured tutorial to GYM-5054
- Add image element width and height
- Add background and border to images

--- a/_sass/pages/_courses.scss
+++ b/_sass/pages/_courses.scss
@@ -212,6 +212,11 @@
 
   figure {
     margin-bottom: 1em;
+
+    img {
+      background-color: $gym-gray;
+      border: 1px solid $gym-gray;
+    }
   }
 
   .cta {
