Update course enrollment is closed message
- Update style rules, nesting

--- a/css/main.scss
+++ b/css/main.scss
@@ -984,8 +984,9 @@ https://github.com/gymnasium/tracker/issues/40
   }
 
   @include breakpoint(medium, max) {
-    .register.disabled
+    .register.disabled {
       margin-top: 1em;
+    }
   }
 }
 
