--- a/css/main.scss
+++ b/css/main.scss
@@ -2,7 +2,7 @@
 ---
 {%- for color in site.data.config.colors -%}
 $gym-{{color[0]}}: {{color[1]}};
-@debug "{{color[0]}}: #{$gym-{{color[0]}}}";
+/*@debug "{{color[0]}}: #{$gym-{{color[0]}}}";*/
 {%- endfor -%}
 
 @import "functions";
