change short_description to description

--- a/_includes/heros/live-streams/content.html
+++ b/_includes/heros/live-streams/content.html
@@ -5,7 +5,7 @@
 <header>
   <div class="container">
     <h2>{{ hero.title }}</h2>
-    <p><b>{{ hero.short_description }}</b> <span>{{ hero.byline }}</span></p>
+    <p><b>{{ hero.description }}</b> <span>{{ hero.byline }}</span></p>
   </div>
 </header>
 
