--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -7,8 +7,8 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
-                  <img alt="{{ courses[featured.gym_shorts.promo_1.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_1.ID].img }}" decoding="async" fetchpriority="high">
+                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.id].url }}">
+                  <img alt="{{ courses[featured.gym_shorts.promo_1.id].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_1.id].img }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
             </div>
@@ -16,17 +16,17 @@
               <article>
                 <header>
                   <p class="subhead all-caps">
-                    <b>{{ courses[featured.gym_shorts.promo_1.ID].topic }}</b>
+                    <b>{{ courses[featured.gym_shorts.promo_1.id].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
-                    {{ courses[featured.gym_shorts.promo_1.ID].title }}
+                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.id].url }}">
+                    {{ courses[featured.gym_shorts.promo_1.id].title }}
                     </a>
                   </h2>
                 </header>
-                <p>{{ courses[featured.gym_shorts.promo_1.ID].description }}</p>
+                <p>{{ courses[featured.gym_shorts.promo_1.id].description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.ID].url }}">
+                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_1.id].url }}">
                     <b>{{ featured.gym_shorts.promo_1.cta }}</b>
                   </a>
                 </div>
@@ -41,8 +41,8 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
-                  <img alt="{{ courses[featured.gym_shorts.promo_2.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_2.ID].img }}" decoding="async" fetchpriority="high">
+                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.id].url }}">
+                  <img alt="{{ courses[featured.gym_shorts.promo_2.id].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_2.id].img }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
             </div>
@@ -50,17 +50,17 @@
               <article>
                 <header>
                   <p class="subhead all-caps">
-                    <b>{{ courses[featured.gym_shorts.promo_2.ID].topic }}</b>
+                    <b>{{ courses[featured.gym_shorts.promo_2.id].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
-                    {{ courses[featured.gym_shorts.promo_2.ID].title }}
+                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.id].url }}">
+                    {{ courses[featured.gym_shorts.promo_2.id].title }}
                     </a>
                   </h2>
                 </header>
-                <p>{{ courses[featured.gym_shorts.promo_2.ID].description }}</p>
+                <p>{{ courses[featured.gym_shorts.promo_2.id].description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.ID].url }}">
+                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_2.id].url }}">
                     <b>{{ featured.gym_shorts.promo_2.cta }}</b>
                   </a>
                 </div>
@@ -75,8 +75,8 @@
           <div class="row">
             <div class="col-xs-12 col-sm-6 col-md-12">
               <figure>
-                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
-                  <img alt="{{ courses[featured.gym_shorts.promo_3.ID].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_3.ID].img }}" decoding="async" fetchpriority="high">
+                <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.id].url }}">
+                  <img alt="{{ courses[featured.gym_shorts.promo_3.id].title }} cover image." src="{{ site.url }}{{ courses[featured.gym_shorts.promo_3.id].img }}" decoding="async" fetchpriority="high">
                 </a>
               </figure>
             </div>
@@ -84,17 +84,17 @@
               <article>
                 <header>
                   <p class="subhead all-caps">
-                    <b>{{ courses[featured.gym_shorts.promo_3.ID].topic }}</b>
+                    <b>{{ courses[featured.gym_shorts.promo_3.id].topic }}</b>
                   </p>
                   <h2>
-                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
-                    {{ courses[featured.gym_shorts.promo_3.ID].title }}
+                    <a href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.id].url }}">
+                    {{ courses[featured.gym_shorts.promo_3.id].title }}
                     </a>
                   </h2>
                 </header>
-                <p>{{ courses[featured.gym_shorts.promo_3.ID].description }}</p>
+                <p>{{ courses[featured.gym_shorts.promo_3.id].description }}</p>
                 <div class="cta">
-                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.ID].url }}">
+                  <a class="gym-button natural" href="{{ site.gymurl }}{{ courses[featured.gym_shorts.promo_3.id].url }}">
                     <b>{{ featured.gym_shorts.promo_3.cta }}</b>
                   </a>
                 </div>
