--- a/_includes/heros/articles/meet-the-metaverse.html
+++ b/_includes/heros/articles/meet-the-metaverse.html
@@ -1,33 +1,2 @@
-<link rel="stylesheet" href="{{ site.url }}/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
-<link rel="preload" href="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-1280w.jpg?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
-<link rel="preload" href="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-768w.jpg?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
-<script nomodule src="{{ site.url }}/js/polyfills/picture/plugins/intrinsic-dimension/pf.intrinsic.min.js?{{ site.time | date:'%s' }}"></script>
-<script nomodule src="{{ site.url }}/js/polyfills/picture/picturefill.min.js?{{ site.time | date:'%s' }}"></script>
-<article class="hero-promo" id="meet-the-metaverse">
-  <div class="container">
-    <div class="content">
-      <div class="image">
-        <a href="https://medium.com/gymnasium/meet-the-metaverse-a-virtual-world-of-potential-4bd2391cc837">
-          <picture>
-            <source srcset="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-768w.jpg?{{ site.time | date:'%s' }}" width="768" height="714" media="(min-width: 1200px)">
-            <img alt="Three people from the Gymnasium team meet in the metaverse at a virtual conference room using Spatial." src="{{ site.url }}/home/img/heros/articles/meet-the-metaverse/meet-the-metaverse-1280w.jpg?{{ site.time | date:'%s' }}" width="1280" height="720" decoding="async" fetchpriority="high">
-          </picture>
-        </a>
-      </div>
-      <div class="text">
-        <header>
-          <hgroup>
-            <p class="subhead all-caps">
-              <b>New Article</b>
-            </p>
-            <h1>Meet the Metaverse: A Virtual World of Potential</h1>
-          </hgroup>
-          <p>If you’re not sure what the metaverse is, you’re not alone. It feels like it’s gone from a buzzword to a business overnight. So, what is this virtual world and why does it matter? Read our new article to find out.</p>
-        </header>
-        <div class="cta">
-          <a class="gym-button gym-button-secondary" href="https://medium.com/gymnasium/meet-the-metaverse-a-virtual-world-of-potential-4bd2391cc837"><b>Meet the Metaverse</b></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</article>
+{%- assign hero = site.data.heros.articles.meet-the-metaverse -%}
+{%- include /heros/articles/layout/hero-article.html -%}
