--- a/_includes/heros/articles/layout/hero-article.html
+++ b/_includes/heros/articles/layout/hero-article.html
@@ -1,7 +1,7 @@
 {%- assign img_path = "/home/img/heros/articles/" -%}
 <link rel="stylesheet" href="{{ site.url }}/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
-<link rel="preload" href="{{ site.url }}{{ hero.artwork[2] }}?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
-<link rel="preload" href="{{ site.url }}{{ hero.artwork[1] }}?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
+<link rel="preload" href="{{ site.url }}{{ img_path }}{{ hero.id }}{{ hero.artwork[2] }}?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
+<link rel="preload" href="{{ site.url }}{{ img_path }}{{ hero.id }}{{ hero.artwork[1] }}?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
 <script nomodule src="{{ site.url }}/js/polyfills/picture/plugins/intrinsic-dimension/pf.intrinsic.min.js?{{ site.time | date:'%s' }}"></script>
 <script nomodule src="{{ site.url }}/js/polyfills/picture/picturefill.min.js?{{ site.time | date:'%s' }}"></script>
 <article class="hero-promo" id="{{ hero.id }}">
