Update blue beanie day hero
- Remove class
- Add ID

--- a/_includes/heros/evergreen/blue-beanie-day.html
+++ b/_includes/heros/evergreen/blue-beanie-day.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="{{ site.url }}/css/heros/hero-blue-beanie-day.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}/home/img/heros/evergreen/blue-beanie-day/gym-bbd-gang-1280w.png?{{ site.time | date:'%s' }}" as="image" media="(min-width: 75em)" fetchpriority="high">
 
-<div class="hero-promo blue-beanie-day">
+<div class="hero-promo" id="hero-blue-beanie-day">
   <div class="container">
     <div class="hero-content-art">
       <picture id="blue-beanie-gang" decoding="async" fetchpriority="high">
