Update blue beanie day hero
- Update alt text description

--- a/_includes/heros/evergreen/blue-beanie-day.html
+++ b/_includes/heros/evergreen/blue-beanie-day.html
@@ -6,7 +6,7 @@
     <div class="hero-content-art">
       <picture id="blue-beanie-gang" decoding="async" fetchpriority="high">
         <source srcset="{{ site.url }}/home/img/heros/evergreen/blue-beanie-day/gym-bbd-gang-1280w.png?{{ site.time | date:'%s' }}" media="(min-width: 40em)">
-        <img alt="A five-person team from various web-related roles wearing blue beanies. One beanie says “Web,” another says “Standards.”" src="{{ site.url }}/home/img/heros/evergreen/blue-beanie-day/gym-bbd-gang-720w.png?{{ site.time | date:'%s' }}" width="720" height="446">
+        <img alt="A five-person team from various web-related roles wearing blue beanies. One beanie says “Web,” and another says “Standards.”" src="{{ site.url }}/home/img/heros/evergreen/blue-beanie-day/gym-bbd-gang-720w.png?{{ site.time | date:'%s' }}" width="720" height="446">
       </picture>
     </div>
     <div class="hero-content-copy">
