Update promo hero
- Update data file
- Update language
- Update artwork
- Add artwork

--- a/_includes/heros/livestreams/hero-promo.html
+++ b/_includes/heros/livestreams/hero-promo.html
@@ -24,7 +24,7 @@
             </p>
             <h1>{{ hero.title }}</h1>
           </hgroup>
-          <p>{{ hero.description }}</p>
+          <p>{{ hero.description }} on <b>{{ hero.date }}</b> at <b>{{ hero.time }}</b>.</p>
         </header>
       </div>
     </div>
