Update livestreams promo hero
- Update description language and layout

--- a/_includes/heros/livestreams/hero-promo.html
+++ b/_includes/heros/livestreams/hero-promo.html
@@ -24,7 +24,7 @@
             </p>
             <h1>{{ hero.title }}</h1>
           </hgroup>
-          <p>{{ hero.description }} on <b>{{ hero.date }}</b> at <b>{{ hero.time }}</b>.</p>
+          <p>{{ hero.description }} <span class="block"><b>{{ hero.date }}</b> at <b>{{ hero.time }}</b></span></p>
         </header>
       </div>
     </div>
