Update livestreams promo hero
- Update title word wrap
- Update date
- Add time element

--- a/_includes/heros/livestreams/hero-promo.html
+++ b/_includes/heros/livestreams/hero-promo.html
@@ -24,7 +24,7 @@
             </p>
             <h1>{{ hero.title }}</h1>
           </hgroup>
-          <p>{{ hero.description }} <span class="block"><b>{{ hero.date }}</b> at <b>{{ hero.time }}</b></span></p>
+          <p>{{ hero.description }} <time datetime="2024-01-30" class="block"><b>{{ hero.date }}</b> at <b>{{ hero.time }}</b></time></p>
         </header>
       </div>
     </div>
