--- a/_includes/heros/livestreams/hero-promo.html
+++ b/_includes/heros/livestreams/hero-promo.html
@@ -24,11 +24,10 @@
             </p>
             <h1>{{ hero.title }}</h1>
           </hgroup>
-          {%- if hero.recording == false -%}
+          {%- if hero.recording != true -%}
           <p>{{ hero.description }} <time datetime="2024-01-30" class="block"><b>{{ hero.date }}</b> at <b>{{ hero.time }}</b></time></p>
-          {%- endif -%}
         </header>
-        {%- if hero.recording == true -%}
+        {%- else -%}
         <div class="cta">
           <a class="gym-button natural" href="{{ hero.cta_url }}"><b>{{ hero.cta }}</b></a>
         </div>
