--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -20,8 +20,9 @@
                 <li><a href="/courses">Courses</a></li>
                 <li><a href="/courses/take5">Tutorials</a></li>
                 <li><a href="/jobs">Jobs</a></li>
-                <li><a href="/webinars">Webinars</a></li>
                 <li><a href="https://medium.com/gymnasium" target="_blank" rel="noopener">Articles</a></li>
+                <li><a href="https://www.youtube.com/@AquentGymnasium/streams" target="_blank" rel="noopener">Livestreams</a></li>
+                <li><a href="/webinars">Webinars</a></li>
                 <li><a href="/about">About</a></li>
               </ul>
             </section>
