--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -47,7 +47,7 @@
                 <li><a href="/faq">FAQ</a></li>
                 <li><a href="/support">Support</a></li>
                 <li><a href="/social-impact">Social Impact</a></li>
-                <li><a href="/privacy-policy">Privacy Policy</a></li>
+                <li><a href="/privacy-policy" rel="privacy-policy">Privacy Policy</a></li>
                 <li><a href="https://aquent.com/csr-policy" target="_blank" rel="noopener">Corporate Social Responsibility</a></li>
                 <li><a href="https://aquent.de/impressum/" target="_blank" rel="noopener">Impressum</a></li>
               </ul>
