Update livestreams promo hero
- Add Take Note content

--- a/_includes/heros/livestreams/hero-promo.html
+++ b/_includes/heros/livestreams/hero-promo.html
@@ -1,4 +1,4 @@
-{%- assign hero = site.data.heros.livestreams.fill-in-the-blanks -%}
+{%- assign hero = site.data.heros.livestreams.take-note -%}
 {%- assign img_path = "/home/img/heros/livestreams/" -%}
 <link rel="stylesheet" href="{{ site.url }}/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}{{ img_path }}{{ hero.id }}{{ hero.artwork[2] }}?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
