Update utility nav
- Hide utility nav

--- a/css/main.scss
+++ b/css/main.scss
@@ -1055,6 +1055,12 @@ aside.system-status {
   display: none;
 }
 
+// Hide `#utility-nav`
+#utility-nav {
+  display: none;
+}
+
+
 // Courseware Raw HTML styling
 
 .raw-html .content {
