--- a/_includes/heros/articles/hero-article.html
+++ b/_includes/heros/articles/hero-article.html
@@ -1,3 +1,4 @@
+{%- assign hero = site.data.heros.articles.diy-ai-custom-gpt -%}
 {%- assign img_path = "/home/img/heros/articles/" -%}
 <link rel="stylesheet" href="{{ site.url }}/css/heros/hero-article.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 <link rel="preload" href="{{ site.url }}{{ img_path }}{{ hero.id }}{{ hero.artwork[2] }}?{{ site.time | date:'%s' }}" as="image" media="(max-width: 75em)" fetchpriority="high">
