Update livestreams promo hero
- Update style

--- a/css/heros/hero-article.scss
+++ b/css/heros/hero-article.scss
@@ -33,6 +33,11 @@
     max-width: 50em;
 
     header {
+
+      hgroup {
+        max-width: 43em;
+      }
+
       .subhead {
         font-weight: bold;
         font-size: 1.15em;
